--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 *.classpath
 PsychologicalEvaluation/.classpath
 PsychologicalEvaluation/src/main/resources/config.properties
+PsychologicalEvaluation/.classpath
