--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@
 PsychologicalEvaluation/.classpath
 PsychologicalEvaluation/src/main/resources/config.properties
 PsychologicalEvaluation/.classpath
+logs/spring_struts2_Hibernate_demo.log
+logs/spring_struts2_Hibernate_demo.log.2016-05-28
+logs/spring_struts2_Hibernate_demo.log.2016-05-30
+logs/spring_struts2_Hibernate_demo.log
+logs/spring_struts2_Hibernate_demo.log
+logs/spring_struts2_Hibernate_demo.log
+logs/spring_struts2_Hibernate_demo.log
+logs/spring_struts2_Hibernate_error.log.2016-06-01
+logs/spring_struts2_Hibernate_error.log
