--- a/.gitignore
+++ b/.gitignore
@@ -2,30 +2,8 @@
 PsychologicalEvaluation/.classpath
 PsychologicalEvaluation/src/main/resources/config.properties
 PsychologicalEvaluation/.classpath
-<<<<<<< HEAD
-PsychologicalEvaluation/.classpath
-PsychologicalEvaluation/.classpath
-PsychologicalEvaluation/.classpath
-PsychologicalEvaluation/.classpath
-PsychologicalEvaluation/.classpath
-*.classpath
+logs/*.log
+logs/*
+PsychologicalEvaluation/.settings/*
+*.project
 PsychologicalEvaluation/.project
-PsychologicalEvaluation/.project.sublime-workspace
-PsychologicalEvaluation/.settings/.jsdtscope
-PsychologicalEvaluation/.settings/org.eclipse.core.resources.prefs
-PsychologicalEvaluation/.settings/org.eclipse.jdt.core.prefs
-PsychologicalEvaluation/.settings/org.eclipse.m2e.core.prefs
-PsychologicalEvaluation/.settings/org.eclipse.wst.common.project.facet.core.prefs.xml
-PsychologicalEvaluation/.settings/org.eclipse.wst.common.project.facet.core.xml
-PsychologicalEvaluation/.settings/org.eclipse.wst.validation.prefs
-=======
-logs/spring_struts2_Hibernate_demo.log
-logs/spring_struts2_Hibernate_demo.log.2016-05-28
-logs/spring_struts2_Hibernate_demo.log.2016-05-30
-logs/spring_struts2_Hibernate_demo.log
-logs/spring_struts2_Hibernate_demo.log
-logs/spring_struts2_Hibernate_demo.log
-logs/spring_struts2_Hibernate_demo.log
-logs/spring_struts2_Hibernate_error.log.2016-06-01
-logs/spring_struts2_Hibernate_error.log
->>>>>>> refs/heads/back
