--- a/PsychologicalEvaluation/src/main/resources/config.properties
+++ b/PsychologicalEvaluation/src/main/resources/config.properties
@@ -6,6 +6,10 @@ jdbc.url = jdbc:mysql://localhost:3306/pes?useUnicode=true&characterEncoding=utf
 jdbc.username = root
 jdbc.password = 123456
 
+#jdbc.url = jdbc:mysql://rejytftuqkhm.rds.sae.sina.com.cn:10295/pes?useUnicode=true&characterEncoding=utf-8
+#jdbc.username = root
+#jdbc.password = fantaosheng
+
 #hibernate config
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = true
