--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ PsychologicalEvaluation/.settings/org.eclipse.wst.validation.prefs
 PsychologicalEvaluation/.classpath
 PsychologicalEvaluation/.settings/org.eclipse.wst.validation.prefs
 PsychologicalEvaluation/.settings/org.eclipse.wst.common.project.facet.core.xml
+PsychologicalEvaluation/src/main/resources/._struts.xml1185053928619042137.tmp
+PsychologicalEvaluation/src/main/resources/._struts.xml687895977099488786.tmp
+PsychologicalEvaluation/src/main/resources/._struts.xml6771862758063909077.tmp
