--- a/PsychologicalEvaluation/src/main/webapp/WEB-INF/web.xml
+++ b/PsychologicalEvaluation/src/main/webapp/WEB-INF/web.xml
@@ -72,7 +72,16 @@
 		<filter-name>struts2</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
+	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/error-404.jsp</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>500</error-code>
+		<location>/error-500.jsp</location>
+	</error-page>
 
 	
 	<welcome-file-list>
