右上角微信用户头像
是打发

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ PsychologicalEvaluation/.settings/org.eclipse.wst.common.project.facet.core.xml
 PsychologicalEvaluation/src/main/resources/._struts.xml1185053928619042137.tmp
 PsychologicalEvaluation/src/main/resources/._struts.xml687895977099488786.tmp
 PsychologicalEvaluation/src/main/resources/._struts.xml6771862758063909077.tmp
+PsychologicalEvaluation/src/main/resources/config.properties
